themes/ecofair-theme/sass/_page-templates.scss
/* ... */
.front-banner-img {
	background-image: url(../assets/images/heroimage01.jpeg);
	background-size: cover;
	background-position: right;
	grid-column-start: 2;
	grid-column-end: 4;
	grid-row-start: 1;
	grid-row-end: 4;
	width: 100%;
	z-index: 2;

	@include tablet {
		grid-column-start: 1;
		grid-column-end: 5;
		grid-row-start: 2;
		grid-row-end: 4;
	}  

	@include desktop {
		grid-column-start: 1;
		grid-column-end: 5;
		grid-row-start: 2;
		grid-row-end: 4;
	}  
}

.sqr-orange {
	grid-column-start: 1;
	grid-column-end: 2;
	grid-row-start: 3;
	grid-row-end: 4;
	justify-self: right;
	height: 6vh;
	width: 6vh;
	background-color: $color__orange-1;
	margin-right: 1rem;

	@include tablet {
		display: none;
	}  

	@include desktop {
		display: grid;
		grid-column-start: 19;
		grid-column-end: 20;
		z-index: 2;
		margin-right: 0rem;
		justify-self: left;
		}  
}

.sqr-dr-green {
	grid-column-start: 1;
	grid-column-end: 2;
	grid-row-start: 2;
	grid-row-end: 3;
	justify-self: right;
	align-self: flex-start;
	height: 11vh;
	width: 11vh;
	background-color: $color__green-1;
	margin-right: 1rem;

	@include tablet {
		grid-column-start: 3;
		grid-column-end: 5;
		grid-row-start: 1;
		grid-row-end: 2;
		margin-left: 1rem;
		margin-right: 0rem;
		height: 8.125rem;
		width: 8.125rem;
	}

	@include desktop {
		height: 176px;
		width: 176px;
	}  
}

.sqr-light-green {
	grid-column-start: 1;
	grid-column-end: 2;
	grid-row-start: 1;
	grid-row-end: 2;
	justify-self: right;
	align-self: flex-start;
	height: 6vh;
	width: 6vh;
	background-color: $color__green-light-1;
	margin-right: 1rem;

   @include tablet {
	margin-right: 0rem;
  }  

  @include desktop {
	grid-column-start: 2;
	grid-column-end: 3;
	grid-row-start: 1;
	grid-row-end: 2;
    }  
}

.event-info {
	grid-column-start: 1;
	grid-column-end: 4;
	grid-row-start: 4;
	grid-row-end: 5;
	padding-top: 0.5rem;
	padding-bottom: 0.5rem;
	z-index: 2;
	width: 100%;

  @include tablet {
	grid-column-start: 5;
	grid-column-end: 9;
	grid-row-start: 2;
	grid-row-end: 4;
	position: relative;
  }

  .site-title-heading {
	font-size: 1rem;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
  }

  .event-title {
	font-size: 4.5rem;
	margin-top: .5rem;
	margin-bottom: .5rem;
	line-height: 1.2;

	@include tablet {
	 width: 30%;
	}
	@include desktop {
		font-size: 3.5rem;
	}
    }
	
	.location {
	margin-bottom: 0px;

	@include desktop {
	    margin-top: 3rem;
	}
    }
}

.event-info-li {
    border-bottom: $line_green;
    width: 55%;

    @include tablet {
	width: 28rem;
    }

    @include desktop {
	width: 47rem;
	position: absolute;
	top: 205px;
	left: 0px;
	z-index: 5;
    }
}


.hero-img-2 {
    grid-column-start: 1;
    grid-column-end: 4;
    grid-row-start: 5;
    grid-row-end: 6;
    background-image: url(../assets/images/heroimage02.jpeg);
    background-size: cover;
    background-position: right;
    height: 351px;
    width: 100%;
    margin-top: 1rem;
    margin-bottom: 3rem;
    z-index: 1;

    @include tablet {
		grid-column-start: 12;
		grid-column-end: 17;
		grid-row-start: 1;
		grid-row-end: 4;
		height: 776px;
		margin: 0px;
    }  

    @include desktop {
		grid-column-start: 9;
		grid-column-end: 17;
		width: 90%;
		justify-self: right;
    }  
}

.hero-img-3 {
    display: none;

    @include desktop {
		background-image: url(../assets/images/heroimage03.png);
		background-size: cover;
		background-position: right;
		display: grid;
		grid-column-start: 17;
		grid-column-end: 21;
		grid-row-start: 1;
		grid-row-end: 3;
		height: 504px;
		width: 100%;
		margin: 0px;
		z-index: 2;
    }  
}

.light-green-bkgrd {
    background-color: $color__background-green;
    width: 100%;
    height: 1162px;
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 6;
    position: absolute;
    top: -20px;
		left: 10px;

    @include tablet {
		grid-column-start: 13;
		grid-column-end: 17;
		top: -324px;
    }

    @include desktop {
		grid-column-start: 13;
		grid-column-end: 21;
		width: 100%;
		height: 1200px;
		top: -207px;
    }
}

.sqr-dr-green-hidden {
    display: none;

    @include desktop {
	display: grid;
	background-color: $color__green-1;
	grid-column-start: 17;
	grid-column-end: 19;
	grid-row-start: 3;
	grid-row-end: 4;
	height: 176px;
	width: 176px;
	z-index: 2;
    }  
}

.banner-widgets {
    display: none;

    @include tablet {
	display:grid;
	grid-column-start: 5;
	grid-column-end: 10;
	grid-row-start: 3;
	grid-row-end: 4;
    }

    @include desktop {
	display:grid;
	grid-column-start: 18;
	grid-column-end: 20;
	grid-row-start: 4;
	grid-row-end: 5;
	z-index: 2;
    }

    .social-icons {
	display: flex;
	justify-content: space-between;
	list-style: none;
	width: 12.5rem;
	margin: 0px;
	a {
	    text-decoration: none;
	}

	@include tablet {
	    padding-left: 1rem;
	}

	@include desktop {
	    padding-left: 0rem;
	    width: 11rem;
	}
    }
    .fa-facebook-square, 
    .fa-instagram,
    .fa-twitter {
	display: flex;
	justify-content: center;
	align-items: center;
	color: white;
	font-size: 29px;
	background: #000;
	height: 48px;
	width: 48px;
	border-radius: 1px;
	margin-bottom: 10px;
    } 
}

// mission statement section

.mission-statement {
    background-color: $color__background-grey;
    padding-top: 2rem;
    padding-bottom: 2rem;
    text-align: center;
    position: relative;
    z-index: 5;
    @include desktop {
	padding-top: 5rem;
	padding-bottom: 5rem;
    }

    h2 {
	font-size: 1.5rem;
    }

    h4{
	font-size: 2.25rem;
	margin-top: 0px;
    }
}

.mission-text {
    width: 95%;
    margin: 0 auto;

    @include tablet {
	width: 50%;
    }
}

.event-description {
    @include desktop {
	width: 75%;
	margin: 0 auto;
    }
}

// event feature section

.event-features {
    @include desktop {
	padding-bottom: 1rem;
	margin-bottom: 1rem;
    }
}
/* ... */

